# midi-funfun

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/agents/: haiku-worker.md  opus-reviewer.md  sonnet-worker.md
Source/Core/: CMakeLists.txt  Version.cpp  Version.h
Source/Core/Audio/: Metronome.cpp  Metronome.h  MonitoringPassthrough.h  PeakLevelTracker.cpp  PeakLevelTracker.h  RecordingTransport.cpp  RecordingTransport.h  Take.h  TakeManager.cpp  TakeManager.h
Source/Core/Model/: Note.h  NoteFormatting.h  NoteSequence.cpp  NoteSequence.h
Source/Core/Pitch/: NoiseGateMapping.h  NoteSegmenter.cpp  NoteSegmenter.h  OctaveErrorCorrector.cpp  OctaveErrorCorrector.h  PitchAnalyzer.cpp  PitchAnalyzer.h  YinPitchDetector.cpp  YinPitchDetector.h
Source/Plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: CMakeLists.txt  CoreVersionTests.cpp  MetronomeTests.cpp  MonitoringPassthroughTests.cpp  NoiseGateMappingTests.cpp  NoteFormattingTests.cpp  NoteSegmenterTests.cpp  NoteSequenceTests.cpp  OctaveErrorCorrectorTests.cpp  PeakLevelTrackerTests.cpp  PitchAnalyzerTests.cpp  RecordingTransportTests.cpp  TakeManagerTests.cpp  YinPitchDetectorTests.cpp
docs/: requirements.md
docs/superpowers/plans/: 2026-07-10-midi-funfun-00-scaffold.md  2026-07-10-midi-funfun-01-recording.md  2026-07-10-midi-funfun-roadmap.md  2026-07-12-midi-funfun-02-pitch-detection.md  2026-07-12-midi-funfun-03-piano-roll.md
docs/superpowers/specs/: 2026-07-10-midi-funfun-architecture-design.md  2026-07-10-midi-funfun-milestone1-recording-design.md  2026-07-12-midi-funfun-milestone2-pitch-detection-design.md  2026-07-12-midi-funfun-milestone3-piano-roll-design.md
